--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
     .title {
         font-family: 'Staatliches', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
     }
+	a{
+	color:#85e0d8;
+	text-decoration:none;
+	}
 </style>
 <!--testing-->
 
