--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                                     target="_blank" rel="noopener noreferrer"><i class="fab fa-amazon fa-2x"
                                         aria-hidden="true"></i></a>
                                 <br><br>
-                                <p>Or Search <b>TEEAARBEE</b> On Your Favourite Podcast App</p>
+                                <p>Or Search <b>teeaarbee</b> On Your Favourite Podcast App</p>
                             </div>
                         </div>
                     </div>
@@ -108,15 +108,15 @@
             Copyright &copy; 2021. TEEAARBEE.
         </p>
         <div class="d-flex justify-content-center align-items-center mb-5">
-        </a>
-        <a href="https://www.instagram.com/teeaarbee/?ref=blog.teeaarbee.com" target="_blank" rel="noreferrer"
-            title="instagram" aria-label="instagram" class="mx-3">
-            <svg fill="#000000" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="25" height="25">
-                <path fill="currentColor"
-                    d="M 11.46875 5 C 7.917969 5 5 7.914063 5 11.46875 L 5 20.53125 C 5 24.082031 7.914063 27 11.46875 27 L 20.53125 27 C 24.082031 27 27 24.085938 27 20.53125 L 27 11.46875 C 27 7.917969 24.085938 5 20.53125 5 Z M 11.46875 7 L 20.53125 7 C 23.003906 7 25 8.996094 25 11.46875 L 25 20.53125 C 25 23.003906 23.003906 25 20.53125 25 L 11.46875 25 C 8.996094 25 7 23.003906 7 20.53125 L 7 11.46875 C 7 8.996094 8.996094 7 11.46875 7 Z M 21.90625 9.1875 C 21.402344 9.1875 21 9.589844 21 10.09375 C 21 10.597656 21.402344 11 21.90625 11 C 22.410156 11 22.8125 10.597656 22.8125 10.09375 C 22.8125 9.589844 22.410156 9.1875 21.90625 9.1875 Z M 16 10 C 12.699219 10 10 12.699219 10 16 C 10 19.300781 12.699219 22 16 22 C 19.300781 22 22 19.300781 22 16 C 22 12.699219 19.300781 10 16 10 Z M 16 12 C 18.222656 12 20 13.777344 20 16 C 20 18.222656 18.222656 20 16 20 C 13.777344 20 12 18.222656 12 16 C 12 13.777344 13.777344 12 16 12 Z">
-                </path>
-            </svg>
-        </a>
+            </a>
+            <a href="https://www.instagram.com/teeaarbee/?ref=blog.teeaarbee.com" target="_blank" rel="noreferrer"
+                title="instagram" aria-label="instagram" class="mx-3">
+                <svg fill="#000000" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="25" height="25">
+                    <path fill="currentColor"
+                        d="M 11.46875 5 C 7.917969 5 5 7.914063 5 11.46875 L 5 20.53125 C 5 24.082031 7.914063 27 11.46875 27 L 20.53125 27 C 24.082031 27 27 24.085938 27 20.53125 L 27 11.46875 C 27 7.917969 24.085938 5 20.53125 5 Z M 11.46875 7 L 20.53125 7 C 23.003906 7 25 8.996094 25 11.46875 L 25 20.53125 C 25 23.003906 23.003906 25 20.53125 25 L 11.46875 25 C 8.996094 25 7 23.003906 7 20.53125 L 7 11.46875 C 7 8.996094 8.996094 7 11.46875 7 Z M 21.90625 9.1875 C 21.402344 9.1875 21 9.589844 21 10.09375 C 21 10.597656 21.402344 11 21.90625 11 C 22.410156 11 22.8125 10.597656 22.8125 10.09375 C 22.8125 9.589844 22.410156 9.1875 21.90625 9.1875 Z M 16 10 C 12.699219 10 10 12.699219 10 16 C 10 19.300781 12.699219 22 16 22 C 19.300781 22 22 19.300781 22 16 C 22 12.699219 19.300781 10 16 10 Z M 16 12 C 18.222656 12 20 13.777344 20 16 C 20 18.222656 18.222656 20 16 20 C 13.777344 20 12 18.222656 12 16 C 12 13.777344 13.777344 12 16 12 Z">
+                    </path>
+                </svg>
+            </a>
             <a href="https://blog.teeaarbee.com" target="_blank"
                 rel="noreferrer" title="goodreads" aria-label="goodreads" class="mx-3">
                 <i class="fa fa-globe" aria-hidden="true"></i>
