--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         content="Weekly Thoughts by TRB (teeaarbee) A weekly podcast where TRB talks on a new topic every week">
 
     <meta name="keywords"
-        content="TRB, TEEAARBEE, tearbear, teerbee, teearrbee, trb podcast, podcast by trb, podcast, weekly podcast by trb, thoughts by trb, weekly htoughts trb">
+        content="trb's weekly podcast, trb podcast, podcast by trb, podcast, weekly podcast by trb, thoughts by trb, weekly thoughts trb, TRB, TEEAARBEE, tearbear, teerbee, teearrbee" >
     <meta name="robots" content="index, follow">
     <meta name="copyright" content="TRB">
     <meta name="language" content="EN">
