--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
     <meta name="robots" content="index, follow">
     <meta name="copyright" content="TRB">
     <meta name="language" content="EN">
-    <meta name="author" content="TRB">
+    <meta name="author" content="teeaarbee">
+    <meta property="og:image" content="https://podcast.teeaarbee.com/cover.png">
+    <meta property="og:url" content="https://podcast.teeaarbee.com">
+    <meta name="language" content="EN">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@teeaarbee">
 
     <!-- Google / Search Engine Tags -->
     <meta itemprop="name" content="TRB'S Weekly Podcast">
